src/css/sf.css
/* ... */
.standard-btn-big {
	color: #04abe1;
	font-size: 1.3em;
	margin: 15px 0;
}

.standard-btn:hover {
	border: 1px solid #a4a4a5;
	-webkit-box-shadow: 0 0 3px #ccc, inset 0 0 1px #fff;
	-moz-box-shadow: 0 0 3px #ccc, inset 0 0 1px #fff;
	box-shadow: 0 0 3px #ccc, inset 0 0 1px #fff;
}

.darker-btn {
	width: auto;
	height: auto;
	color: #eee;
	border: 1px solid #1a1a1a;
	background: #606060;
	background: -moz-linear-gradient(top,  #606060 0%, #3b3b3b 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#606060), color-stop(100%,#3b3b3b));
	background: -webkit-linear-gradient(top,  #606060 0%,#3b3b3b 100%);
	background: -o-linear-gradient(top,  #606060 0%,#3b3b3b 100%);
	background: -ms-linear-gradient(top,  #606060 0%,#3b3b3b 100%);
	background: linear-gradient(to bottom,  #606060 0%,#3b3b3b 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#606060', endColorstr='#3b3b3b',GradientType=0 );
	-webkit-box-shadow: 0 0 3px #eee, inset 0 0 1px #d4d4d4;
	-moz-box-shadow: 0 0 3px #eee, inset 0 0 1px #d4d4d4;
	box-shadow: 0 0 3px #eee, inset 0 0 1px #d4d4d4;
}

.darker-btn:hover {
	color: #fff;
	border: 1px solid #000;
	-webkit-box-shadow: 0 0 3px #999, inset 0 0 1px #d4d4d4;
	-moz-box-shadow: 0 0 3px #999, inset 0 0 1px #d4d4d4;
	box-shadow: 0 0 3px #999, inset 0 0 1px #d4d4d4;
}

.blue-btn {
	width: auto;
	height: auto;
	color: #fff;
	border: 1px solid #0481aa;
	background: #1bc5fc;
	background: -moz-linear-gradient(top,  #1bc5fc 0%, #049dcf 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1bc5fc), color-stop(100%,#049dcf));
	background: -webkit-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: -o-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: -ms-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: linear-gradient(to bottom,  #1bc5fc 0%,#049dcf 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1bc5fc', endColorstr='#049dcf',GradientType=0 );
	-webkit-box-shadow: 0 0 3px #eee, inset 0 0 1px #fff;
	-moz-box-shadow: 0 0 3px #eee, inset 0 0 1px #fff;
	box-shadow: 0 0 3px #eee, inset 0 0 1px #fff;
}

.blue-btn:hover {
	border: 1px solid #03607e;
	-webkit-box-shadow: 0 0 3px #bbb, inset 0 0 1px #fff;
	-moz-box-shadow: 0 0 3px #bbb, inset 0 0 1px #fff;
	box-shadow: 0 0 3px #bbb, inset 0 0 1px #fff;
}

.login-btn {
	width: auto;
	height: auto;
	padding: 0.3em 1.2em 0.4em 1.2em;
	color: #eee;
	font-size: 1.0em;
	font-weight: bold;
	cursor: pointer;
	border: 1px solid #191919;
	-webkit-border-radius: 4px 4px 4px 4px;
	-moz-border-radius: 4px 4px 4px 4px;
	border-radius: 4px 4px 4px 4px;
	-webkit-box-shadow: 0 0 3px #494949, inset 0 0 1px #aaa;
	-moz-box-shadow: 0 0 3px #494949, inset 0 0 1px #aaa;
	box-shadow: 0 0 3px #494949, inset 0 0 1px #aaa;
	background: #555454; /* Old browsers */
	background: -moz-linear-gradient(top, #555454 0%, #070707 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#555454), color-stop(100%,#070707));
	background: -webkit-linear-gradient(top, #555454 0%,#070707 100%);
	background: -o-linear-gradient(top, #555454 0%,#070707 100%);
	background: -ms-linear-gradient(top, #555454 0%,#070707 100%);
	background: linear-gradient(to bottom, #555454 0%,#070707 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#555454', endColorstr='#070707',GradientType=0 );
}

.login-btn:hover {
	color: #fff;
	border: 1px solid #000;
	-webkit-box-shadow: 0 0 3px #494949, inset 0 0 1px #777;
	-moz-box-shadow: 0 0 3px #494949, inset 0 0 1px #777;
	box-shadow: 0 0 3px #494949, inset 0 0 1px #777;
}

/* Tables */
table {
	width: auto;
	text-align: left;
	border-collapse: collapse;
}

table th, table td {
	border: 1px solid #c9c9cb;
	vertical-align: middle;
	padding: 0.7em 1.2em;
}

table th {
	background-color: #404040;
	color: #f4f4f6;
	font-size: 0.9em;
}

table td {
	font-size: 0.85em;
}

table tbody tr.altrow {
	background-color: #f9f9fa;
}

table tbody tr:hover, table tbody tr.altrow:hover {
	background-color: #e1f8ff;
}

/* Tabs */
.tab {
	position: relative;
	width: 158px;
	margin-right: 2px;
	float: left;
	font-size: 0.9em;
	text-align: center;
	-webkit-border-radius: 3px 3px 0 0;
	-moz-border-radius: 3px 3px 0 0;
	border-radius: 3px 3px 0 0;
}

.tab-off {
	height: 29px;
	line-height: 29px;
	text-shadow: #fff 0 1px 2px;
	cursor: pointer;
	border: 1px solid #c4c4c5;
	background: #fdfdff;
	background: -moz-linear-gradient(top, #fdfdff 0%, #e1e1e3 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#fdfdff), color-stop(100%,#e1e1e3));
	background: -webkit-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: -o-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: -ms-linear-gradient(top, #fdfdff 0%,#e1e1e3 100%);
	background: linear-gradient(to bottom, #fdfdff 0%,#e1e1e3 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#fdfdff', endColorstr='#e1e1e3',GradientType=0 );
}

.tab-off:hover {
	border: 1px solid #a4a4a5;
}

.tab-on {
	height: 35px;
	line-height: 35px;
	margin-top: -6px;
	color: #fff;
	border: 1px solid #0481aa;
	background: #1bc5fc;
	background: -moz-linear-gradient(top,  #1bc5fc 0%, #049dcf 100%);
	background: -webkit-gradient(linear, left top, left bottom, color-stop(0%,#1bc5fc), color-stop(100%,#049dcf));
	background: -webkit-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: -o-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: -ms-linear-gradient(top,  #1bc5fc 0%,#049dcf 100%);
	background: linear-gradient(to bottom,  #1bc5fc 0%,#049dcf 100%);
	filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#1bc5fc', endColorstr='#049dcf',GradientType=0 );
}

/* Notifications */
.notification {
	position: relative;
	margin: 0 0 10px;
	padding: 7px 10px 7px 35px;
	line-height: 15px;
	font-size: 0.9em;
}
/* ... */

